--- a/apps/events.html
+++ b/apps/events.html
@@ -1,15 +1,17 @@
 <html>
 <head></head>
 <body>
-<h1 onmouseover="change()">Events in Javascript</h1>
+
 <h1 onmouseout="change()">Welcome to Web Page</h1>
 <button onclick="show()">Show my name </button>
 <button ondblclick="showDate()">Date and Time</button><br><br>
 <input onfocus="change()"<br><br>
 <input onblur="change()">
+<h1 onmouseover="change()">Events in Javascript</h1>
+
 <script>
 function show(){
-document.write("<h1>My name is Jyothi</h1>")
+document.write("<h1>My name is Keerthana</h1>")
 }
 function showDate(){
 date=Date()
