--- a/apps/validate.html
+++ b/apps/validate.html
@@ -13,7 +13,7 @@
 
       <div class="col-md-4">
         <label for="validationServer02" class="form-label">Last name</label>
-        <input type="text" class="form-control is-valid" id="validationServer02" value="Otto" required>
+        <input type="text" class="form-control is-valid" id="validationServer02" value=" " required>
         <div class="valid-feedback"> </div>
       </div>
 
@@ -23,7 +23,7 @@
           <span class="input-group-text" id="inputGroupPrepend3">@</span>
           <input type="text" class="form-control is-invalid" id="validationServerUsername" aria-describedby="inputGroupPrepend3 validationServerUsernameFeedback" required>
           <div id="validationServerUsernameFeedback" class="invalid-feedback">
-            Please choose a username.
+            Please enter valid username.
           </div>
         </div>
       </div>
@@ -39,11 +39,15 @@
       <div class="col-md-3">
         <label for="validationServer04" class="form-label">State</label>
         <select class="form-select is-invalid" id="validationServer04" aria-describedby="validationServer04Feedback" required>
-          <option selected disabled value="">Choose...</option>
-          <option>...</option>
+          <option selected value="1">Kerala</option>
+          <option selected value="2">Odisha</option>
+          <option selected value="3">Delhi</option>
+          <option selected value="4">Bihar</option>
+          <option selected value="5">Goa</option>
+          <option selected value="6">Punjab</option>
         </select>
         <div id="validationServer04Feedback" class="invalid-feedback">
-          Please select a valid state.
+          Please choose a state.
         </div>
       </div>
 
