--- a/apps/web.html
+++ b/apps/web.html
@@ -1,5 +1,9 @@
 <html>
 <head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="stylesheet" type="text/css" href="text.css">
+
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 </head>
 
@@ -7,7 +11,7 @@
 
    <h1 class="container-fluid bg-warning">This is my First Application with Bootstrap </h1>
    <nav class="navbar navbar-expand navbar-dark bg-dark"> 
-      <a class="navbar-brand" href=" ">MRU</a>
+      <a class="navbar-brand" href=" "> Lorven Electrical Appliances </a>
       <ul> 
           <li class="navbar-item"><a href=" " class="nav-link"> HOME </a></li>
            <li class="navbar-item"><a href=" " class="nav-link"> PRODUCTS </a></li>
